# opengl-scene

./: .clang-format  .gitattribute  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Folder.DotSettings  README.md  cmake-format.json
cmake/: BCMProperties.cmake  SystemLink.cmake  data.cmake  dependencies.cmake  download-cpm.cmake
data/backpack/: backpack.mtl
data/backpack_gltf/: backpack.gltf
data/ball/: 8-ball.mtl  ball.gltf
data/bobomb/: bobomb.mtl
data/cat/: concrete_cat_statue_4k.mtl
data/cat_gltf/: cat.gltf
data/cube/: cube.mtl
data/ground/: ground.mtl
data/oyster/: oyster.mtl
data/sphere/: myHonestSphere.mtl
data/terrain/: terrain.gltf
data/wall/: wall.mtl
include/: bloom_framebuffer.hpp  camera.hpp  consts.hpp  cube_scene.hpp  index_buffer.hpp  job_system.hpp  macros.hpp  material.hpp  material_manager.hpp  mesh.hpp  model.hpp  number_types.hpp  pipeline.hpp  scene.hpp  scene_graph.hpp  shader.hpp  square_scene.hpp  texture.hpp  texture_manager.hpp  texture_scene.hpp  thread_safe_ring_buffer.hpp  timer.hpp  triangle_scene.hpp  utils.hpp  vertex_buffer.hpp  window.hpp
include/ogl/: framebuffer.hpp  index_buffer.hpp  material.hpp  pipeline.hpp  renderer.hpp  shader.hpp  uniform_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
include/scenes/: backpack_scene.hpp  backpack_scene_outline.hpp  cube_scene.hpp  cubemap_scene.hpp  deferred_shading_scene.hpp  gamma_scene.hpp  instancing_scene.hpp  light_scene.hpp  normal_map_scene.hpp  scene.hpp  shadow_mapping_scene.hpp  ssao_scene.hpp  texture_scene.hpp  transparent_scene.hpp  triangle_scene.hpp
shaders/: cube.frag  cube.vert  fog.frag  singleColor.frag  texture.frag  texture.vert  triangle.frag  triangle.vert  uniform.frag  uniform.vert
shaders/bloom/: downsample.frag  upsample.frag
shaders/cubemap/: cubemap.frag  cubemap.vert  reflection.frag  refraction.frag
shaders/deferred/: debug_light.frag  debug_light.vert  deferred_shading.frag  directional_light_pass.frag  gbuffer.frag  light_pass.vert  point_light_pass.frag
shaders/gamma/: mesh.vert  mesh_no_specular.frag
shaders/hdr/: hdr.frag  hdr.vert
shaders/instancing/: instancing.frag  instancing.glsl  instancing.vert  no_instancing.glsl  no_instancing.vert
shaders/light/: light_cube.frag  light_cube.vert  light_source.frag  light_source.vert
shaders/mesh/: mesh.frag  mesh.vert  mesh_no_specular.frag
shaders/normal_map/: mesh.frag  mesh.vert  mesh_no_specular.frag
shaders/pbr/: brdf.frag  cubemap.frag  cubemap.vert  directional_light_pass.frag  equirectangular.frag  equirectangular.vert  gbuffer.frag  gbuffer.vert  gbuffer_arm.frag  gbuffer_no_ao.frag  ibl_ambient.frag  irradiance_convolution.frag  point_light_pass.frag  prefilter_convolution.frag
shaders/sao/: blur.frag  sao.frag
shaders/shadow_map/: depth.frag  depth.vert  shadow_map.frag  shadow_map.vert  shadow_map_no_normals.frag  shadow_map_no_normals.vert
shaders/ssao/: blur.frag  ssao.frag
shaders/transparent/: transparent.frag
src/: bloom_framebuffer.cpp  camera.cpp  consts.cpp  index_buffer.cpp  job_system.cpp  main.cpp  material.cpp  material_manager.cpp  mesh.cpp  model.cpp  number_types.cpp  pipeline.cpp  scene_graph.cpp  shader.cpp  texture.cpp  texture_manager.cpp  timer.cpp  utils.cpp  window.cpp
src/ogl/: framebuffer.cpp  index_buffer.cpp  material.cpp  pipeline.cpp  renderer.cpp  shader.cpp  uniform_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/scenes/: scene.cpp  ssao_scene.cpp
